# travel-planer

./: .dockerignore  .env.dist  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: api.py  config.py  exceptions.py  main.py  schemas.py
app/auth/: dependencies.py
app/database/: core.py  dependencies.py  mixins.py  models.py
app/database/managers/: base.py  sqlalchemy.py
app/places/: clients.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  services.py
app/travels/: dependencies.py  exceptions.py  models.py  routers.py  schemas.py  services.py
docs/: travel_planer.postman_collection.json
migrations/: env.py
migrations/versions/: 2026-06-03_14-40-58_9becf373e218.py  2026-06-03_15-32-03_6096d09575fd.py  2026-06-03_17-04-15_5a3a78f7a21a.py
