[project]
name = "travel-planer"
version = "0.1.0"
description = ""
authors = [
    {name = "TyPaporotnyk",email = "daniil.svadkovsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=8.0.0,<9.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "dishka (>=1.10.1,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
